--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <form method="post" enctype="multipart/form-data">
-            <input type="file" name="image"><br>
+            <input type="file" name="image" required><br>
             <input type="submit" value="Upload">
         </form>
     </div>
